--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,3 +1,10 @@
 @import "../layout/header.scss";
 @import "../base/reset.scss";
 @import "../componentes/boton.scss";
+@import "../layout/primerparte.scss";
+@import "../layout/cards.scss";
+@import "../layout/ayuda.scss";
+@import "../layout/footer.scss";
+@import "../media-queries/mobile.scss";
+
+
