--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ header nav .boton {
 header .lupa {
   margin-bottom: 6px;
   width: 35px;
-  margin-right: 140px;
+  margin-right: 110px;
 }
 
 .boton1, .boton2 {
@@ -43,7 +43,7 @@ header .lupa {
   border-radius: 25px;
   padding: 8px 18px;
   margin-right: -150px;
-  margin-bottom: 10px;
+  margin-bottom: 8px;
   border: 1px solid #C85000;
   font-weight: bold;
 }
@@ -73,6 +73,143 @@ header .lupa {
 .boton3:hover {
   background-color: #FFE2CE;
   color: #C85000;
+}
+
+.primerparte {
+  display: flex;
+  flex-direction: column;
+}
+.primerparte .tituloeimagen {
+  display: flex;
+  flex-direction: row;
+}
+.primerparte .tituloeimagen h1 {
+  color: black;
+  margin-left: 100px;
+  margin-top: 150px;
+}
+.primerparte .tituloeimagen .imgdetitulo {
+  margin-left: 140px;
+}
+.primerparte .iconoscirculos {
+  display: flex;
+  flex-direction: row;
+  margin-top: 50px;
+}
+.primerparte .iconoscirculos .cardsmall {
+  display: flex;
+  flex-direction: column;
+  font-family: "Inter", sans-serif;
+  align-items: center;
+  justify-content: center;
+  margin-left: 5px;
+  border: 2px solid #F4F4F4;
+  border-radius: 20%;
+  background-color: #F4F4F4;
+  margin: 40px;
+  width: 120px;
+  margin-left: 60px !important;
+}
+.primerparte .iconoscirculos .cardsmall .iconos {
+  width: 50px;
+}
+.primerparte .iconoscirculos .cardsmall:hover {
+  background-color: #d5e1f7;
+}
+.primerparte .segundotitulo {
+  font-size: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 50px;
+  margin-left: -45px;
+}
+
+.diaengalicia {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  margin-left: 60px;
+  margin-top: 30px;
+  margin-bottom: 60px;
+}
+.diaengalicia .direcciondecards {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.diaengalicia .direcciondecards .imgcard {
+  width: 300px;
+}
+.diaengalicia .direcciondecards h3 {
+  color: black;
+}
+.diaengalicia .direcciondecards p {
+  width: 60%;
+}
+.diaengalicia .direcciondecards .boton2 {
+  display: flex;
+  justify-content: center;
+  margin-left: -190px;
+  width: 180px;
+}
+
+.ayuda {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-bottom: 20px;
+  margin-left: -50px;
+  background-color: #F5EEEA;
+}
+.ayuda .chat {
+  margin-left: 200px !important;
+}
+.ayuda h3 {
+  color: black;
+}
+.ayuda .p {
+  color: black;
+}
+
+footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-self: center;
+  margin-top: 80px;
+  margin-bottom: 40px;
+}
+footer .primero h4 {
+  color: black;
+}
+footer .primero .contact-item {
+  width: 35px;
+}
+footer .segundo {
+  display: flex;
+  flex-direction: column;
+  margin-left: 100px;
+}
+footer .segundo p {
+  color: black;
+}
+footer .redes {
+  display: flex;
+  align-items: center;
+}
+footer .redes .icono-wsp {
+  width: 50px;
+  position: fixed;
+  right: 25px;
+  bottom: 50px;
+  transition: 1s;
+}
+footer .redes .icono-wsp:hover {
+  transform: rotate(360deg);
 }
 
 /*# sourceMappingURL=style.css.map */
