--- a/layout/_header.scss
+++ b/layout/_header.scss
@@ -37,6 +37,10 @@ nav{
     .lupa{
         margin-bottom: 6px;
         width: 35px;
-        margin-right: 110px;
+        margin-right: -40px;
+    }
+
+    .navbar{
+        display: none;
     }
 }
