--- a/layout/_ayuda.scss
+++ b/layout/_ayuda.scss
@@ -6,6 +6,7 @@
     margin-bottom: 20px;
     margin-left: -50px;
     background-color: #F5EEEA;
+    margin-bottom: 40px;
 
     .chat {
         margin-left: 200px !important;
