--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,6 +5,7 @@
 @import "../layout/cards.scss";
 @import "../layout/ayuda.scss";
 @import "../layout/footer.scss";
+@import "../layout/cuerpo.scss";
 @import "../media-queries/mobile.scss";
 
 
