--- a/componentes/_boton.scss
+++ b/componentes/_boton.scss
@@ -5,7 +5,7 @@
     font-size: 15px;
     border-radius: 25px;
     padding: 8px 18px;
-    margin-right: -150px;
+    margin-right: -200px;
     margin-bottom: 8px;
     border: 1px solid #C85000; 
     font-weight: bold;
@@ -18,7 +18,7 @@
     @extend .boton1;
     background-color: #C85000;
     color:white;
-    margin-left: 20px;
+    margin-left: 10px;
     &:hover {
         background-color: white;
         color:#C85000;
@@ -28,10 +28,13 @@
 
 .boton3{
   background-color: white;
+  margin-bottom: 15px;
   color: #C85000;
   text-decoration: none;
   font-size: 15px;
+  font-weight: bold;
   border-radius: 25px;
+  border: none;
   padding: 8px 18px;  color:black;
   &:hover {
     background-color: #FFE2CE;
