--- a/layout/_header.scss
+++ b/layout/_header.scss
@@ -1,46 +1,56 @@
-header{
+header {
     display: flex;
     justify-content: space-between;
     align-items: center;
     flex-direction: row;
     margin-top: 20px;
-    border-bottom: 1px solid #E7EAED; /* Color y grosor de la línea */
+    border-bottom: 1px solid #E7EAED;
+    /* Color y grosor de la línea */
 
-.logogalicia{
-width: 150px;
-margin-left: 90px;
-margin-bottom: 15px;
-}
+    .logogalicia {
+        width: 150px;
+        margin-left: 90px;
+        margin-bottom: 15px;
+    }
 
-nav{
-    margin-left: -140px;
+    nav {
+        margin-left: -140px;
 
-    ul{
-        display: flex;
-        list-style-type: none;
-        li{
-            a{
-                color:black;
-                margin: 20px;
-                text-decoration: none;
-                font-weight: bold;
+        .dropdown {
+            .dropdown-item {
+                margin-left: none;
             }
+
+            ul {
+                display: flex;
+                list-style-type: none;
+
+                li {
+                    a {
+                        color: black;
+                        margin: 20px;
+                        text-decoration: none;
+                        font-weight: bold;
+                    }
+                }
+            }
+
+        }
+
+        .boton {
+            color: black;
+            text-decoration: none;
+
         }
     }
 
-    .boton{
-        color:black;
-        text-decoration: none;
-
-    }
-}
-    .lupa{
+    .lupa {
         margin-bottom: 6px;
         width: 35px;
         margin-right: -40px;
     }
 
-    .navbar{
+    .navbar {
         display: none;
     }
 }
