base de seccion persona e inicio listas

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,6 +6,9 @@
 @import "../layout/ayuda.scss";
 @import "../layout/footer.scss";
 @import "../layout/cuerpo.scss";
+@import "../layout/cuentas.scss";
+@import "../layout/pagayuda.scss";
+
 @import "../media-queries/mobile.scss";
 
 
