--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ header nav .boton {
 header .lupa {
   margin-bottom: 6px;
   width: 35px;
-  margin-right: -40px;
+  margin-right: 40px;
 }
 header .navbar {
   display: none;
@@ -230,7 +230,6 @@ footer .redes .icono-wsp:hover {
   flex-direction: column;
   background-color: #F4F4F4;
   /*sobre clavesytoken.html*/
-  /*sobre tarjetas.html*/
 }
 .cuerpo .tituloeimagen {
   display: flex;
@@ -265,31 +264,37 @@ footer .redes .icono-wsp:hover {
   /* Asegura que la imagen esté detrás del texto */
   border-radius: 20px;
 }
-.cuerpo .card {
+
+.contenedorcard {
   display: flex;
-  width: 650px;
-  height: auto;
-  margin-bottom: 40px;
+  justify-content: center; /* Centrar horizontalmente las tarjetas */
 }
-.cuerpo .tarjetas {
-  display: flex;
-  flex-wrap: wrap;
-  width: auto;
-}
-.cuerpo .tarjetas .card {
-  flex: 0 0 calc(33.33% - 20px); /* 3 por fila */
+
+.card {
+  width: 18rem;
   margin: 10px;
 }
-.cuerpo .tarjetas .card .imgtarjeta {
-  width: 300px;
-  height: auto;
+
+.contenedorayuda {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
-.cuerpo .tarjetas .card .h2 {
-  color: black;
+.contenedorayuda h1 {
+  margin-top: 20px;
+  margin-bottom: 30px;
 }
-.cuerpo .tarjetas .card .boton2 {
-  width: 150px;
-  margin-top: 40px;
+
+.temasconsultados {
+  margin-top: 30px;
+}
+.temasconsultados .card {
+  margin-top: 30px !important;
+}
+.temasconsultados .card .row .col-md-4 .iconosayuda {
+  width: 60%;
+  margin-top: 30px;
+  margin-left: 20px;
 }
 
 @media screen and (max-width: 767px) {
