--- a/layout/_pagayuda.scss
+++ b/layout/_pagayuda.scss
@@ -1,4 +1,35 @@
-.contenedorayuda{
+.contenedorayuda {
     display: flex;
     align-items: center;
+    flex-direction: column;
+
+    h1 {
+        margin-top: 20px;
+        margin-bottom: 30px;
+    }
+
 }
+
+    .temasconsultados {
+        margin-top: 30px;
+        // display: grid;
+        // grid-template-columns: repeat(3, 1fr);
+        // /* 3 columnas de tamaño igual */
+        // grid-template-rows: repeat(3, 100px);
+        // /* 3 filas de 100px de alto cada una */
+        // gap: 10px;
+        .card {
+            margin-top: 30px !important;
+
+            .row {
+                .col-md-4 {
+                    .iconosayuda {
+                        width: 60%;
+                        margin-top: 30px;
+                        margin-left: 20px;
+                    }
+                }
+            }
+        }
+    }
+
