--- a/layout/_cards.scss
+++ b/layout/_cards.scss
@@ -26,7 +26,7 @@
             display: flex;
             justify-content: center;
             margin-left: -190px;
-            width: 180px;
+            width: auto;
         }
 
      
