--- a/layout/_cards.scss
+++ b/layout/_cards.scss
@@ -28,7 +28,13 @@
             margin-left: -190px;
             width: auto;
         }
-
+       
      
 }
+
+}
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+    margin-top: 25px;
+  background-color: #C85000;
 }
