--- a/layout/_header.scss
+++ b/layout/_header.scss
@@ -7,6 +7,9 @@ header {
     border-bottom: 1px solid #E7EAED;
     /* Color y grosor de la línea */
 
+    .dropdown1{
+        display: none;
+    }
     .logogalicia {
         width: 150px;
         margin-left: 90px;
