--- a/media-queries/_mobile.scss
+++ b/media-queries/_mobile.scss
@@ -3,6 +3,14 @@
         display: flex;
         justify-content: space-between;
 
+        .dropdown1{
+            display: block;
+            margin-left: 10px;
+            margin-top: -15px;
+            background-color: #fac4a0;
+            border-radius: 10px;
+            font-weight: bold;
+        }
 
         nav {
             display: none;
@@ -85,15 +93,56 @@
         }
     }
 
+    /*CLAVES Y TOKEN*/
+    .cuerpo{
+        .tituloeimagen{
+            h1{
+                display: none ;
+            }
+            p{
+                display: none;
+            }
+            .imgweb{
+                display:none;
+            }
+            .imgmobi{
+                display: block;
+                width: 700px;
+            }
+        }
+        
+    /*TARJETAS*/
+    .tarjetas{
+        display: flex;
+        flex-direction: column;
 
+    }
 
+    /*CUENTAS*/
 
+    .contenedorcard{
+        display: flex;
+        flex-direction: column;
+    }
+    }
+/*AYUDA*/
+.temasconsultados {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .card{
+    width: 200px;
+    .imgtarjeta{
+        width: 250px !important;
+    }
+  }
 
-
-
-
-
-
+  .iconosayuda {
+    width: 80px !important; 
+    height: auto;
+  }
 
 
 
